deployments/pathweb/workloads/media-services/flaresolverr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media-services
  labels:
    app.kubernetes.io/name: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flaresolverr
    spec:
      # runtimeClassName: gvisor
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
        ports:
        - containerPort: 8191
          name: http
        resources:
          requests:
            cpu: "2"
            memory: "300Mi"
          limits:
            cpu: "2"
            memory: "1Gi"
