deployments/pathweb/workloads/media-services/flaresolverr/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flaresolverr-network-policy
  namespace: media-services
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:app.kubernetes.io/name": prowlarr
    toPorts:
    - ports:
      - port: "8191"
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": home-network
        "k8s:app.kubernetes.io/name": node-red
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": home-network
        "k8s:app.kubernetes.io/name": n8n
    toPorts:
    - ports:
      - port: "8191"
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
